--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "angular2": "2.0.0-alpha.44",
+    "node-static": "^0.7.7",
     "systemjs": "0.19.2"
   },
   "devDependencies": {
